# tts_webui_extension.parakeet

./: LICENSE  README.md  pyproject.toml
tts_webui_extension/parakeet/: main.py
